--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A brief description of your page" />
+    <meta name="keywords" content="mansaray, illustration, ishmael, css" />
+    <meta name="author" content="Mansaray Ishmael" />
 
     <link rel="stylesheet" href="./index.css" />
     <!-- displays site properly based on user's device -->
